fixed tab deletion alignment on iphones in the tabs menu

--- a/styles/app/TabsMenu.module.scss
+++ b/styles/app/TabsMenu.module.scss
@@ -1,5 +1,5 @@
 .tabsContainer {
-    max-height: calc(97vh - 75px);
+    max-height: calc(85vh - 75px);
     width: 90vw;
     background: purple;
     margin-left: 5vw;
@@ -40,6 +40,7 @@
             filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.15));
             opacity: 95%;
             margin-bottom: .3em;
+            position: relative;
 
             .tabClickSurface {
                 position: absolute;
